--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A platform to help brands and influencers manage each other",
   "main": "index.js",
+  "engines": {
+    "node": "10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:reset": "psql -d influencer_connect_dev < ./lib/db/schema/01_schema.sql && psql -d influencer_connect_dev < ./lib/db/seeds/all.sql",
