--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.1"
   }
 }
