--- a/server/.env.development
+++ b/server/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV=development
 DB_HOST=localhost
-DB_USER=development
-DB_DATABASE=influencer_connect_dev
-DB_PASS=development
+DB_USER=postgres
+DB_DATABASE=pg_corcus_aggregator
+DB_PASS=sasdfasdf
 DB_PORT=5432
 JWT_SECRET=bezkoder_secret_key
