--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:reset": "psql -d influencer_connect_dev < ./lib/db/schema/01_schema.sql && psql -d influencer_connect_dev < ./lib/db/seeds/all.sql",
+    "db:reset": ". ./.env.development && PGPASSWORD=$DB_PASS psql -h $DB_HOST  -U $DB_USER -d $DB_DATABASE < ./lib/db/schema/01_schema.sql && PGPASSWORD=$DB_PASS psql -h $DB_HOST  -U $DB_USER -d $DB_DATABASE < ./lib/db/seeds/all.sql",
     "dev": "nodemon -L server.js"
   },
   "repository": {
