--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dropdown": "^1.9.0",
     "react-moment": "^1.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "socket.io-client": "^3.1.0"
   },
   "scripts": {
     "start": "PORT=3009 react-scripts start",
